Committed fixes (Thanks to DA) to fix responsivene ss and other misc layout issues.

--- a/styles.css
+++ b/styles.css
@@ -15,18 +15,15 @@ body {
  div > h2 {
      font-size: 40px;
  }
- 
- hr {
-     width: 100%;
- }
 
 /* ABOVE IS GLOBAL, DO NOT TOUCH */
+
+
 
 /*Style header*/
 
 .title-container {
     display: flex;
-    flex-flow: column wrap;
     justify-content: center;
     align-content: flex-start;
     padding-left: 30px;
@@ -46,7 +43,7 @@ body {
 
 .card-container {
     display: flex;
-    flex-flow: column wrap;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -54,6 +51,8 @@ body {
     font-family: "DM Serif Text", serif;
     font-weight: 400;
     font-style: normal;
+    padding-bottom: 32px;
+    border-bottom: 1px solid #E8D8C4;
 }
 
 .card-image {
@@ -82,13 +81,9 @@ body {
     font-size: 10px;
 }
 
-/** FUCK YOU FUCK YOU FUCK YOU, WHY DO YOU NOT JUST BE WHITE LIKE THE REST OF IT, THE COLOR IS LITERALLY WHITE **/
-
 a:link {
     color: white;
 }
-
-/** FUCK YOU FOR MAKING ME DO THIS **/
 
 /* Skill Tile Styling */
 
@@ -98,16 +93,18 @@ a:link {
     align-items: center;
     gap: 20px;
     margin-top: 50px;
+    margin-bottom: 60px;
+    flex-wrap: wrap;
 }
 
 .skill-card {
-    flex: 1;
     max-width: 300px;
     padding: 20px;
     background-color: #E8D8C4;
     border-radius: 5px;
     text-align: center;
     min-height: 362px;
+    flex-shrink: 0;
 }
 
 .skill-title {
@@ -117,6 +114,8 @@ a:link {
     font-family: "Poetsen One", sans-serif;
     font-weight: 400;
     font-style: normal;
+    border-bottom: 1px solid black;
+    padding-bottom: 5px;
 }
 
 .skill-desc {
@@ -124,7 +123,7 @@ a:link {
     font-family: "Freeman", sans-serif;
     font-weight: 400;
     font-style: normal;
-    border-top: 1px solid black;
     padding-top: 5px;
 }
+
 /* Retrospectively, having a class called -title and then one -tile was not good forethinking */
